Ask us done TO-DO send emails

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -1,1 +1,5 @@
+NotNull.question.content=Can not be empty!
+NotEmpty.question.content=Can not be empty!
+Size.question.content=Must be less than 400 characters!
+
 home.label=Home
