--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -1,1 +1,5 @@
+NotNull.question.content=Nu poate fi gol!
+NotEmpty.question.content=Nu poate fi gol!
+Size.question.content=Mai putin de 400 de caractere!
+
 home.label=Acasa
