You can now make an account

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -3,3 +3,11 @@ NotEmpty.question.content=Can not be empty!
 Size.question.content=Must be less than 400 characters!
 
 home.label=Home
+
+addUser.invalidName=Numele introdus este incorect!
+addUser.invalidEmail=Adresa de e-mail introdus\u0103 este incorect\u0103!
+addUser.invalidPassword=Parola introdus\u0103 este incorect\u0103!
+addUser.invalidUser=Numele de utilizator introdus este incorect!
+addUser.tooLongName=Numele introdus este prea lung!
+addUser.duplicateUser=Acest user deja exist\u0103 \u00een baza de date!
+addUser.duplicateEmail= Acest email deja exist\u0103 \u00een baza de date!
