--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -3,3 +3,13 @@ NotEmpty.question.content=Nu poate fi gol!
 Size.question.content=Mai putin de 400 de caractere!
 
 home.label=Acasa
+
+
+
+addUser.invalidName=The submitted name is incorrect!
+addUser.invalidEmail=The e-mail address is incorrect!
+addUser.invalidPassword=The password is incorrect!
+addUser.invalidUser=The username is incorrect!
+addUser.duplicateUser=This username already exists in the database!
+addUser.duplicateEmail=This email already exists in the database!
+addUser.tooLongName=The submitted name is too long!
