Log in changes and theme

--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -4,12 +4,11 @@ Size.question.content=Mai putin de 400 de caractere!
 
 home.label=Acasa
 
+addUser.invalidName=Numele introdus este incorect!
+addUser.invalidEmail=Adresa de e-mail introdus\u0103 este incorect\u0103!
+addUser.invalidPassword=Parola introdus\u0103 este incorect\u0103!
+addUser.invalidUser=Numele de utilizator introdus este incorect!
+addUser.tooLongName=Numele introdus este prea lung!
+addUser.duplicateUser=Acest user deja exist\u0103 \u00een baza de date!
+addUser.duplicateEmail= Acest email deja exist\u0103 \u00een baza de date!
 
-
-addUser.invalidName=The submitted name is incorrect!
-addUser.invalidEmail=The e-mail address is incorrect!
-addUser.invalidPassword=The password is incorrect!
-addUser.invalidUser=The username is incorrect!
-addUser.duplicateUser=This username already exists in the database!
-addUser.duplicateEmail=This email already exists in the database!
-addUser.tooLongName=The submitted name is too long!
