New messages_ro.properties

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -3,6 +3,20 @@ NotEmpty.question.content=Can not be empty!
 Size.question.content=Must be less than 400 characters!
 
 home.label=Home
+news.label=News
+articles.label=Articles
+events.label=Events
+askus.label=Ask us!
+about.label=About us
+
+username.label=Username
+password.label=Password
+
+signin.label=Sign in
+loginFailed.label=Log in failed!
+signup.label=Sign up
+signout.label=Sign out
+
 
 addUser.invalidName=The submitted name is incorrect!
 addUser.invalidEmail=The e-mail address is incorrect!
