--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -3,6 +3,21 @@ NotEmpty.question.content=Nu poate fi gol!
 Size.question.content=Mai putin de 400 de caractere!
 
 home.label=Acasa
+news.label=Stiri
+articles.label=Articole
+events.label=Evenimente
+askus.label=Intreabarea ta!
+about.label=Despre noi
+
+
+username.label=Utilizator
+password.label=Parola
+
+signin.label=Logare
+loginFailed.label=Autentificare esuata
+signup.label=Cont nou
+signout.label=Delogare
+
 
 addUser.invalidName=Numele introdus este incorect!
 addUser.invalidEmail=Adresa de e-mail introdus\u0103 este incorect\u0103!
