--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -17,6 +17,13 @@ loginFailed.label=Log in failed!
 signup.label=Sign up
 signout.label=Sign out
 
+nodata.label=No data!
+welocome.label=Welcome
+
+
+viewDetails.label=View details
+stomatologie.label=Stomatology
+generala.label=General
 
 addUser.invalidName=The submitted name is incorrect!
 addUser.invalidEmail=The e-mail address is incorrect!
