--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -18,6 +18,14 @@ loginFailed.label=Autentificare esuata
 signup.label=Cont nou
 signout.label=Delogare
 
+nodata.label=Fara date!
+welocome.label=Bun venit
+all.label=Toate
+
+viewDetails.label=Detalii
+
+stomatologie.label=Stomatologie
+generala.label=Generala
 
 addUser.invalidName=Numele introdus este incorect!
 addUser.invalidEmail=Adresa de e-mail introdus\u0103 este incorect\u0103!
