Almost done messages

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -24,6 +24,15 @@ welocome.label=Welcome
 viewDetails.label=View details
 stomatologie.label=Stomatology
 generala.label=General
+viewed.label=Viewed
+noComments.label=No comments, please add one!
+comment.label=Comment!
+comments.label=Comments:
+
+newTopic.label=New topic!
+noQuestions.label=No questions!
+said.label=said:
+answer.label=Answer!
 
 addUser.invalidName=The submitted name is incorrect!
 addUser.invalidEmail=The e-mail address is incorrect!
