--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -27,6 +27,18 @@ viewDetails.label=Detalii
 stomatologie.label=Stomatologie
 generala.label=Generala
 
+viewed.label=Vizualizari
+noComments.label=Nu exista comentarii, va rugam adaugati!
+comment.label=Adauga comentariu!
+comments.label=Comentarii:
+
+
+newTopic.label=Subiect nou!
+noQuestions.label=Nicio intrebare!
+said.label=a spus:
+answer.label=Raspunde!
+
+
 addUser.invalidName=Numele introdus este incorect!
 addUser.invalidEmail=Adresa de e-mail introdus\u0103 este incorect\u0103!
 addUser.invalidPassword=Parola introdus\u0103 este incorect\u0103!
