--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -27,7 +27,7 @@ viewDetails.label=Detalii
 stomatologie.label=Stomatologie
 generala.label=Generala
 
-viewed.label=Vizualizari
+viewed.label=Vizualizari:
 noComments.label=Nu exista comentarii, va rugam adaugati!
 comment.label=Adauga comentariu!
 comments.label=Comentarii:
