Sign in form internat

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -41,3 +41,11 @@ addUser.invalidUser=The username is incorrect!
 addUser.duplicateUser=This username already exists in the database!
 addUser.duplicateEmail=This email already exists in the database!
 addUser.tooLongName=The submitted name is too long!
+
+signUp.fname=First name
+signUp.lname=Last name
+signUp.uname=First name
+signUp.pass=Password
+signUp.mail=E-mail
+signUp.submit=Submit
+signUp.cancel=Cancel
