--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -47,3 +47,10 @@ addUser.tooLongName=Numele introdus este prea lung!
 addUser.duplicateUser=Acest user deja exist\u0103 \u00een baza de date!
 addUser.duplicateEmail= Acest email deja exist\u0103 \u00een baza de date!
 
+signUp.fname=Prenume
+signUp.lname=Nume de familie
+signUp.uname=Nume utilizator
+signUp.pass=Parola
+signUp.mail=E-mail
+signUp.submit=Trimite
+signUp.cancel=Renunta
