Fixed strip articles

--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -54,3 +54,5 @@ signUp.pass=Parola
 signUp.mail=E-mail
 signUp.submit=Trimite
 signUp.cancel=Renunta
+
+login.text= Log in pentru a afla mai multe...
