--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -24,7 +24,7 @@ welocome.label=Welcome
 viewDetails.label=View details
 stomatologie.label=Stomatology
 generala.label=General
-viewed.label=Viewed
+viewed.label=Viewed:
 noComments.label=No comments, please add one!
 comment.label=Comment!
 comments.label=Comments:
