--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -18,18 +18,18 @@ loginFailed.label=Autentificare esuata
 signup.label=Cont nou
 signout.label=Delogare
 
-nodata.label=Fara date!
+nodata.label=Momentan nu exist\u0103 continut
 welocome.label=Bun venit
 all.label=Toate
 
 viewDetails.label=Detalii
 
 stomatologie.label=Stomatologie
-generala.label=Generala
+generala.label=Medicin\u0103 General\u0103
 
 viewed.label=Vizualizari:
-noComments.label=Nu exista comentarii, va rugam adaugati!
-comment.label=Adauga comentariu!
+noComments.label=Nu exist\u0103 comentarii, v\u0103 rug\u0103m ad\u0103ugati!
+comment.label=Adaug\u0103 comentariu!
 comments.label=Comentarii:
 
 
