--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -6,7 +6,7 @@ home.label=Home
 news.label=News
 articles.label=Articles
 events.label=Events
-askus.label=Ask us!
+askus.label=Ask us
 about.label=About us
 
 username.label=Username
@@ -17,7 +17,7 @@ loginFailed.label=Log in failed!
 signup.label=Sign up
 signout.label=Sign out
 
-nodata.label=No data!
+nodata.label=No data
 welocome.label=Welcome
 
 
@@ -51,3 +51,15 @@ signUp.submit=Submit
 signUp.cancel=Cancel
 
 login.text= Log in to find out more...
+go.enter= Go
+
+stiri.text=General information from the medical world of yesterday, today and tomorrow.
+articole.text=Scientific studies designed to improve knowledge for students and physicians.
+askus.text=Your curiosities are answered here.
+evenimente.text=Scientific meetings and social agenda of the medical world.
+
+editme.label=Edit
+
+inregistrare.label =Sign up
+forgotten.label =Forgotten password. Send us an e-mail!
+please.label=Please sign in
