--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -1,24 +1,24 @@
 NotNull.question.content=Nu poate fi gol!
 NotEmpty.question.content=Nu poate fi gol!
-Size.question.content=Mai putin de 400 de caractere!
+Size.question.content=Mai pu\u0163in de 400 de caractere!
 
-home.label=Acasa
-news.label=Stiri
+home.label=Acas\u0103
+news.label=\u015Etiri
 articles.label=Articole
 events.label=Evenimente
-askus.label=Intreabarea ta!
+askus.label=\u00CEntreabarea ta
 about.label=Despre noi
 
 
 username.label=Utilizator
-password.label=Parola
+password.label=Parol\u0103
 
 signin.label=Logare
-loginFailed.label=Autentificare esuata
+loginFailed.label=Autentificare e\u015Fuat\u0103
 signup.label=Cont nou
 signout.label=Delogare
 
-nodata.label=Momentan nu exist\u0103 continut
+nodata.label=Momentan nu exist\u0103 con\u0163inut
 welocome.label=Bun venit
 all.label=Toate
 
@@ -27,16 +27,16 @@ viewDetails.label=Detalii
 stomatologie.label=Stomatologie
 generala.label=Medicin\u0103 General\u0103
 
-viewed.label=Vizualizari:
+viewed.label=Vizualiz\u0103ri:
 noComments.label=Nu exist\u0103 comentarii, v\u0103 rug\u0103m ad\u0103ugati!
 comment.label=Adaug\u0103 comentariu!
 comments.label=Comentarii:
 
 
 newTopic.label=Subiect nou!
-noQuestions.label=Nicio intrebare!
+noQuestions.label=Nicio \u00EEntrebare!
 said.label=a spus:
-answer.label=Raspunde!
+answer.label=R\u0103spunde!
 
 
 addUser.invalidName=Numele introdus este incorect!
@@ -44,8 +44,8 @@ addUser.invalidEmail=Adresa de e-mail introdus\u0103 este incorect\u0103!
 addUser.invalidPassword=Parola introdus\u0103 este incorect\u0103!
 addUser.invalidUser=Numele de utilizator introdus este incorect!
 addUser.tooLongName=Numele introdus este prea lung!
-addUser.duplicateUser=Acest user deja exist\u0103 \u00een baza de date!
-addUser.duplicateEmail= Acest email deja exist\u0103 \u00een baza de date!
+addUser.duplicateUser=Acest user deja exist\u0103!
+addUser.duplicateEmail= Acest email deja exist\u0103!
 
 signUp.fname=Prenume
 signUp.lname=Nume de familie
@@ -53,6 +53,19 @@ signUp.uname=Nume utilizator
 signUp.pass=Parola
 signUp.mail=E-mail
 signUp.submit=Trimite
-signUp.cancel=Renunta
+signUp.cancel=Renun\u0163\u0103
 
 login.text= Log in pentru a afla mai multe...
+go.enter= Intr\u0103
+
+stiri.text=Informa\u0163ii generale din lumea medicala de ieri, de ast\u0103zi si de m\u00E2ine.
+articole.text=Studii \u015Ftiin\u0163ifice destinate perfec\u0163ion\u0103rii cunostintelor, pentru studen\u0163i si medici.
+askus.text=Curiozit\u0103tile dumneavoastr\u0103 primesc r\u0103spuns aici.
+evenimente.text=Agenda \u00EEntrunirilor \u015Ftiintifice \u015Fi sociale din lumea medical\u0103.
+
+editme.label=Editeaz\u0103
+
+
+inregistrare.label =\u00CEnregistrare
+forgotten.label =Ai uitat parola. Trimite-ne un e-mail!
+please.label=\u00CEnregistreaz\u0103-te
