--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -17,7 +17,7 @@ loginFailed.label=Log in failed!
 signup.label=Sign up
 signout.label=Sign out
 
-nodata.label=No data
+nodata.label=No content
 welocome.label=Welcome
 
 
@@ -30,7 +30,7 @@ comment.label=Comment!
 comments.label=Comments:
 
 newTopic.label=New topic!
-noQuestions.label=No questions!
+noQuestions.label=No questions. Please add!
 said.label=said:
 answer.label=Answer!
 
