--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -28,13 +28,13 @@ stomatologie.label=Stomatologie
 generala.label=Medicin\u0103 General\u0103
 
 viewed.label=Vizualiz\u0103ri:
-noComments.label=Nu exist\u0103 comentarii, v\u0103 rug\u0103m ad\u0103ugati!
+noComments.label=Nu exist\u0103 comentarii, v\u0103 rug\u0103m ad\u0103uga\u0163i!
 comment.label=Adaug\u0103 comentariu!
 comments.label=Comentarii:
 
 
 newTopic.label=Subiect nou!
-noQuestions.label=Nicio \u00EEntrebare!
+noQuestions.label=Nicio \u00EEntrebare. V\u0103 rug\u0103m ad\u0103uga\u0163i!
 said.label=a spus:
 answer.label=R\u0103spunde!
 
@@ -61,7 +61,7 @@ go.enter= Intr\u0103
 stiri.text=Informa\u0163ii generale din lumea medicala de ieri, de ast\u0103zi si de m\u00E2ine.
 articole.text=Studii \u015Ftiin\u0163ifice destinate perfec\u0163ion\u0103rii cunostintelor, pentru studen\u0163i si medici.
 askus.text=Curiozit\u0103tile dumneavoastr\u0103 primesc r\u0103spuns aici.
-evenimente.text=Agenda \u00EEntrunirilor \u015Ftiintifice \u015Fi sociale din lumea medical\u0103.
+evenimente.text=Agenda \u00EEntrunirilor \u015Ftiin\u0163ifice \u015Fi sociale din lumea medical\u0103.
 
 editme.label=Editeaz\u0103
 
