--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -63,3 +63,5 @@ editme.label=Edit
 inregistrare.label =Sign up
 forgotten.label =Forgotten password. Send us an e-mail!
 please.label=Please sign in
+
+pleaseMsg.label=Please type an answer not longer than 400 characters!
