--- a/src/main/resources/messages/messages_ro.properties
+++ b/src/main/resources/messages/messages_ro.properties
@@ -69,3 +69,5 @@ editme.label=Editeaz\u0103
 inregistrare.label =\u00CEnregistrare
 forgotten.label =Ai uitat parola. Trimite-ne un e-mail!
 please.label=\u00CEnregistreaz\u0103-te
+
+pleaseMsg.label=Mesajul nu poate avea mai mult de 400 de caractere!
